<resources>
    <string name="app_name">YaoGame</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_email">Username/Email</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="home">主页</string>
    <string name="sports">体育</string>
    <string name="esports">电竞</string>
    <string name="mine">我的</string>
    <string name="competition_subscribe">订阅</string>
</resources>